# aio_cc

./: .gitignore  ANALYTICS_GUIDE.md  ANALYTICS_PERFORMANCE_FIX.md  ANALYTICS_SETUP.md  AUTHENTICATION_GUIDE.md  CHANNEL_ANALYTICS_GUIDE.md  CNAME  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_SCHEDULING.md  ISSUES_FIXED.md  MISSED_REPLAYS_FEATURE.md  Makefile  OBS_DETECTION_GUIDE.md  OUTRO_GUIDE.md  README.md  SAAS_ARCHITECTURE.md  SCHEDULING_FIX.md  SCHEDULING_STATUS.md  SETUP_GUIDE.md  START_GUIDE.md  SUMMARY_OUTRO_FEATURE.md  TRANSITION_GUIDE.md  WATCHER_PANEL_OBS_DISPLAY.md  add_outro_batch.py  analytics.db  check_instagram_metrics.py  check_uploads_status.py  debug_tiktok.py  env.example  get_instagram_token.py  index.html  main.py  manual_instagram_update.py  open_dashboard.py  privacy.html  pyproject.toml  quick_add_instagram_views.py  schedule_all_missed.py  setup_windows.bat  signature.html  (+7 more)
analytics-dashboard/: README.md  tailwind.config.js
analytics-dashboard/src/: App.tsx  config.ts  index.css
analytics-dashboard/src/components/: ActivityLogItem.tsx  AnalyticsDashboard.tsx  DashboardLayout.tsx  DocsLayout.tsx  DocsSidebar.tsx  ErrorBanner.tsx  LoadingScreen.tsx  LoadingSpinner.tsx  MarkdownRenderer.tsx  MetricCard.tsx  PlatformStats.tsx  ProtectedRoute.tsx  (+6 more)
audio/: README.md
backend/: Dockerfile  README.md  docker-compose.yml  requirements.txt  setup_env.sh
backend/k8s/: deployment.yaml  ingress.yaml  postgres.yaml  redis.yaml  secrets.example.yaml  service.yaml
backend/src/: __init__.py  config.py  database.py  main.py
docs/: README.md
docs/architecture/: COMPLETE_STACK_STARTUP.md
docs/authentication/: AUTH_QUICK_START.md
docs/backend/: QUICKSTART.md
docs/fixes-and-changes/: ALL_FIXES_SUMMARY.md  DATETIME_FIXES.md  IMPLEMENTATION_SUMMARY.md  STARTUP_FIXES.md
docs/getting-started/: QUICK_START.md
docs/obs-integration/: OBS_DETECTION_SUMMARY.md  OBS_SETTINGS_GUIDE.md
docs/scheduling/: SAFE_SCHEDULING_WORKFLOW.md  SCHEDULING_GUIDE.md  SCHEDULING_IMPLEMENTATION_PROGRESS.md  SCHEDULING_SAFETY_GUIDE.md
examples/: tron_transitions.py
html/: privacy.html  terms.html
scripts/: __init__.py  init_database.py  install_uv.ps1  setup_windows.ps1  start_all.ps1  start_all.py  test_obs_detection.py
scripts/analytics/: __init__.py  add_manual_instagram_metrics.py  auto_sync_metrics.py  collect_instagram_metrics.py  collect_metrics.py  start_analytics.py  sync_channels.py
scripts/content/: __init__.py  create_test_videos.py  gen.py
src/: analytics.db
src/analytics/: __init__.py  api_server.py  channel_discovery.py  database.py  metrics_collector.py  oauth_channel_discovery.py  video_tracker.py
src/content_creation/: callback_server.py  cli.py  clip_watcher.py  config_manager.py  ngrok_manager.py  oauth_manager.py  obs_detector.py  scheduler.py  sora_transitions.py  types.py  upload_manager.py  video_processor.py  watcher_events.py
src/managers/: ai_manager.py  api_client.py  config_manager.py  discord_service.py  minio_cleanup.py  ngrok_manager.py  oauth_manager.py  upload_manager.py
src/platform_uploaders/: __init__.py  instagram.py  tiktok.py  youtube.py
src/scheduling/: __init__.py  scheduler.py  scheduler_daemon.py
src/ui/: __init__.py  auth_window.py  main_window.py
(+33 files in other folders)
